--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "twootr",
   "type": "module",
   "version": "0.1.0",
-  "proxy": "http://localhost:8080/",
+  "proxy": "https://twootr-jc.herokuapp.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
